tests/NormalTests/paczka1/small_fuzzy/43020287.err
Error in line 2: 5fIbD1mEc A860 49,3
Error in line 10: MziIm A606 41,6
